--- a/LarrysList/LarrysList/LarrysList.csproj
+++ b/LarrysList/LarrysList/LarrysList.csproj
@@ -120,7 +120,9 @@
     <Compile Include="Models\Collector.cs" />
     <Compile Include="Models\Global.cs" />
     <Compile Include="Models\Setting.cs" />
+    <Compile Include="Models\Stage.cs" />
     <Compile Include="Models\University.cs" />
+    <Compile Include="Models\Workflow.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Result.cs" />
     <Compile Include="Services\Config\Globals.cs" />
