--- a/LarrysList/LarrysList/LarrysList.csproj
+++ b/LarrysList/LarrysList/LarrysList.csproj
@@ -118,6 +118,7 @@
     </Compile>
     <Compile Include="Models\Address.cs" />
     <Compile Include="Models\Collector.cs" />
+    <Compile Include="Models\Company.cs" />
     <Compile Include="Models\Email.cs" />
     <Compile Include="Models\Global.cs" />
     <Compile Include="Models\Network.cs" />
