--- a/LarrysList/LarrysList/LarrysList.csproj
+++ b/LarrysList/LarrysList/LarrysList.csproj
@@ -122,6 +122,8 @@
     <Compile Include="Models\Address.cs" />
     <Compile Include="Models\AddressSearch.cs" />
     <Compile Include="Models\AddressSearchResult.cs" />
+    <Compile Include="Models\Artist.cs" />
+    <Compile Include="Models\ArtistSearch.cs" />
     <Compile Include="Models\City.cs" />
     <Compile Include="Models\Collection.cs" />
     <Compile Include="Models\Collector.cs" />
