aadded logging to file upload

--- a/LarrysList/LarrysList/NLog.config
+++ b/LarrysList/LarrysList/NLog.config
@@ -7,19 +7,27 @@
   for information on customizing logging rules and outputs.
    -->
   <targets>
-    <!-- add your targets here -->
-    
-    <!--
     <target xsi:type="File" name="f" fileName="${basedir}/logs/${shortdate}.log"
-            layout="${longdate} ${uppercase:${level}} ${message}" />
-    -->
+            layout="${machinename} ${longdate} ${uppercase:${level}} ${message}">
+      <layout xsi:type="Log4JXmlEventLayout"/>
+    </target>
+
+    <target xsi:type="Mail" name="MailTarget" html="true" subject="LarrysList ERROR - BurnPlus" body="${machinename}|${message}"
+       layout="${machinename}|${longdate}|${level:uppercase=true}|${logger}|${message}|${callsite}"
+       to="errors@hackandcraft.com"
+       from="errors@hackandcraft.com"
+       smtpAuthentication="Basic"
+       smtpUserName="errors@hackandcraft.com"
+       smtpPassword="Popov2010"
+       smtpServer="smtp.googlemail.com"
+       enableSsl="true"
+       smtpPort="25" />
+
   </targets>
 
   <rules>
-    <!-- add your logging rules here -->
-    
-    <!--
     <logger name="*" minlevel="Trace" writeTo="f" />
-    -->
+    <logger name="*" minlevel="Error" writeTo="MailTarget" />
+
   </rules>
 </nlog>
