--- a/LarrysList/LarrysList/packages.config
+++ b/LarrysList/LarrysList/packages.config
@@ -13,4 +13,5 @@
   <package id="Newtonsoft.Json" version="4.5.6" targetFramework="net45" />
   <package id="NLog" version="2.0.0.2000" targetFramework="net45" />
   <package id="NLog.Config" version="2.0.0.2000" targetFramework="net45" />
+  <package id="TopShelf" version="3.1.0" targetFramework="net45" />
 </packages>
