--- a/LarrysList/packages/repositories.config
+++ b/LarrysList/packages/repositories.config
@@ -1,4 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <repositories>
   <repository path="..\LarrysList\packages.config" />
+  <repository path="..\MailQueue\packages.config" />
 </repositories>
