--- a/LarrysList/LarrysList/LarrysList.csproj
+++ b/LarrysList/LarrysList/LarrysList.csproj
@@ -161,6 +161,7 @@
     <Compile Include="Models\Publication.cs" />
     <Compile Include="Models\Publisher.cs" />
     <Compile Include="Models\Region.cs" />
+    <Compile Include="Models\Relation.cs" />
     <Compile Include="Models\Setting.cs" />
     <Compile Include="Models\Source.cs" />
     <Compile Include="Models\SourceType.cs" />
