--- a/LarrysList/LarrysList/LarrysList.csproj
+++ b/LarrysList/LarrysList/LarrysList.csproj
@@ -123,6 +123,7 @@
     <Compile Include="Controllers\ArtistController.cs" />
     <Compile Include="Controllers\BaseController.cs" />
     <Compile Include="Controllers\ConfigController.cs" />
+    <Compile Include="Controllers\Web\UserController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -175,6 +176,7 @@
     <Compile Include="Models\TopMuseum.cs" />
     <Compile Include="Models\University.cs" />
     <Compile Include="Models\Document.cs" />
+    <Compile Include="Models\User.cs" />
     <Compile Include="Models\Workflow.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Result.cs" />
