added  submit payment to larryslist

--- a/LarrysList/LarrysList/Web.config
+++ b/LarrysList/LarrysList/Web.config
@@ -4,6 +4,11 @@
   http://go.microsoft.com/fwlink/?LinkId=169433
   -->
 <configuration>
+  <configSections>
+    <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+      <section name="LarrysList.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+    </sectionGroup>
+  </configSections>
   <appSettings>
     <add key="webpages:Version" value="2.0.0.0" />
     <add key="webpages:Enabled" value="false" />
@@ -39,4 +44,15 @@
       <add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="GET,HEAD,POST,DEBUG,PUT,DELETE,PATCH,OPTIONS" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" />
     </handlers>
   </system.webServer>
+  <applicationSettings>
+    <LarrysList.Properties.Settings>
+      <setting name="LarrysList_com_adyen_palliveRecurring_Recurring"
+        serializeAs="String">
+        <value>https://pal-live.adyen.com/pal/servlet/soap/Recurring</value>
+      </setting>
+      <setting name="LarrysList_comadyenpaltest_Payment" serializeAs="String">
+        <value>https://pal-test.adyen.com/pal/servlet/soap/Payment</value>
+      </setting>
+    </LarrysList.Properties.Settings>
+  </applicationSettings>
 </configuration>
