--- a/LarrysList/LarrysList/LarrysList.csproj
+++ b/LarrysList/LarrysList/LarrysList.csproj
@@ -123,6 +123,7 @@
     <Compile Include="Controllers\ArtistController.cs" />
     <Compile Include="Controllers\BaseController.cs" />
     <Compile Include="Controllers\ConfigController.cs" />
+    <Compile Include="Controllers\Web\CreditController.cs" />
     <Compile Include="Controllers\Web\SearchController.cs" />
     <Compile Include="Controllers\Web\UserController.cs" />
     <Compile Include="Global.asax.cs">
@@ -165,6 +166,9 @@
     <Compile Include="Models\Network.cs" />
     <Compile Include="Models\Origin.cs" />
     <Compile Include="Models\OriginSearch.cs" />
+    <Compile Include="Models\Payment.cs" />
+    <Compile Include="Models\PaymentOption.cs" />
+    <Compile Include="Models\PaymentStatus.cs" />
     <Compile Include="Models\Position.cs" />
     <Compile Include="Models\Publication.cs" />
     <Compile Include="Models\Publisher.cs" />
@@ -183,6 +187,11 @@
     <Compile Include="Models\User.cs" />
     <Compile Include="Models\Workflow.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Properties\Settings.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTimeSharedInput>True</DesignTimeSharedInput>
+      <DependentUpon>Settings.settings</DependentUpon>
+    </Compile>
     <Compile Include="Result.cs" />
     <Compile Include="Services\Config\Globals.cs" />
     <Compile Include="Controllers\Admin\ResourceController.cs" />
@@ -192,6 +201,23 @@
     <Compile Include="Services\Messaging\Message.cs" />
     <Compile Include="Services\Messaging\MessagingService.cs" />
     <Compile Include="Services\Messaging\Templates\ForgotPwdEmail.cs" />
+    <Compile Include="Services\Payment\CreatePaymentNotice.cs" />
+    <Compile Include="Services\Payment\CreditCardValidator.cs" />
+    <Compile Include="Services\Payment\PaymentEndPoint.cs" />
+    <Compile Include="Services\Payment\PaymentNotice.cs" />
+    <Compile Include="Services\Payment\PaymentValidator.cs" />
+    <Compile Include="Services\Payment\Pay.cs" />
+    <Compile Include="Services\Payment\ProcessPayment.cs" />
+    <Compile Include="Web References\com.adyen.palliveRecurring\Reference.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Reference.map</DependentUpon>
+    </Compile>
+    <Compile Include="Web References\comadyenpaltest\Reference.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Reference.map</DependentUpon>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="App_Start\FilterConfig.cs" />
@@ -221,6 +247,77 @@
     <None Include="NLog.xsd">
       <SubType>Designer</SubType>
     </None>
+    <Content Include="Properties\Settings.settings">
+      <Generator>SettingsSingleFileGenerator</Generator>
+      <LastGenOutput>Settings.Designer.cs</LastGenOutput>
+    </Content>
+    <Content Include="Web References\com.adyen.palliveRecurring\DisableResult.datasource">
+      <DependentUpon>Reference.map</DependentUpon>
+    </Content>
+    <Content Include="Web References\com.adyen.palliveRecurring\Recurring.wsdl" />
+    <Content Include="Web References\com.adyen.palliveRecurring\RecurringDetailsResult.datasource">
+      <DependentUpon>Reference.map</DependentUpon>
+    </Content>
+    <Content Include="Web References\com.adyen.palliveRecurring\RecurringResult.datasource">
+      <DependentUpon>Reference.map</DependentUpon>
+    </Content>
+    <Content Include="Web References\com.adyen.palliveRecurring\Reference.map">
+      <Generator>MSDiscoCodeGenerator</Generator>
+      <LastGenOutput>Reference.cs</LastGenOutput>
+    </Content>
+    <Content Include="Web References\com.adyen.palliveRecurring\StoreTokenResult.datasource">
+      <DependentUpon>Reference.map</DependentUpon>
+    </Content>
+    <Content Include="Web References\comadyenpaltest\BalanceCheckResult.datasource">
+      <DependentUpon>Reference.map</DependentUpon>
+    </Content>
+    <Content Include="Web References\comadyenpaltest\DirectDebitResponse.datasource">
+      <DependentUpon>Reference.map</DependentUpon>
+    </Content>
+    <Content Include="Web References\comadyenpaltest\FundTransferResult.datasource">
+      <DependentUpon>Reference.map</DependentUpon>
+    </Content>
+    <Content Include="Web References\comadyenpaltest\ModificationResult.datasource">
+      <DependentUpon>Reference.map</DependentUpon>
+    </Content>
+    <Content Include="Web References\comadyenpaltest\Payment.wsdl" />
+    <Content Include="Web References\comadyenpaltest\PaymentResult.datasource">
+      <DependentUpon>Reference.map</DependentUpon>
+    </Content>
+    <Content Include="Web References\comadyenpaltest\Reference.map">
+      <Generator>MSDiscoCodeGenerator</Generator>
+      <LastGenOutput>Reference.cs</LastGenOutput>
+    </Content>
+  </ItemGroup>
+  <ItemGroup>
+    <WCFMetadata Include="Service References\" />
+  </ItemGroup>
+  <ItemGroup>
+    <WebReferences Include="Web References\" />
+  </ItemGroup>
+  <ItemGroup>
+    <WebReferenceUrl Include="https://pal-live.adyen.com/pal/Recurring.wsdl">
+      <UrlBehavior>Dynamic</UrlBehavior>
+      <RelPath>Web References\com.adyen.palliveRecurring\</RelPath>
+      <UpdateFromURL>https://pal-live.adyen.com/pal/Recurring.wsdl</UpdateFromURL>
+      <ServiceLocationURL>
+      </ServiceLocationURL>
+      <CachedDynamicPropName>
+      </CachedDynamicPropName>
+      <CachedAppSettingsObjectName>Settings</CachedAppSettingsObjectName>
+      <CachedSettingsPropName>LarrysList_com_adyen_palliveRecurring_Recurring</CachedSettingsPropName>
+    </WebReferenceUrl>
+    <WebReferenceUrl Include="https://pal-test.adyen.com/pal/Payment.wsdl">
+      <UrlBehavior>Dynamic</UrlBehavior>
+      <RelPath>Web References\comadyenpaltest\</RelPath>
+      <UpdateFromURL>https://pal-test.adyen.com/pal/Payment.wsdl</UpdateFromURL>
+      <ServiceLocationURL>
+      </ServiceLocationURL>
+      <CachedDynamicPropName>
+      </CachedDynamicPropName>
+      <CachedAppSettingsObjectName>Settings</CachedAppSettingsObjectName>
+      <CachedSettingsPropName>LarrysList_comadyenpaltest_Payment</CachedSettingsPropName>
+    </WebReferenceUrl>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
