--- a/LarrysList/LarrysList/LarrysList.csproj
+++ b/LarrysList/LarrysList/LarrysList.csproj
@@ -208,6 +208,7 @@
     <Compile Include="Services\Payment\PaymentValidator.cs" />
     <Compile Include="Services\Payment\Pay.cs" />
     <Compile Include="Services\Payment\ProcessPayment.cs" />
+    <Compile Include="Services\Payment\RecurringDetailsEndPoint.cs" />
     <Compile Include="Web References\com.adyen.palliveRecurring\Reference.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
