added ranking and completion job

--- a/LarrysList/RankingandCompletion/NLog.config
+++ b/LarrysList/RankingandCompletion/NLog.config
@@ -8,9 +8,9 @@
    -->
   <targets>
     <target xsi:type="File" name="f" fileName="${basedir}/logs/${shortdate}.log"
-         layout="${machinename} ${longdate} ${uppercase:${level}} ${message}" />
+            layout="${machinename} ${longdate} ${uppercase:${level}} ${message}" />
 
-    <target xsi:type="Mail" name="MailTarget" html="true" subject="MAILQUEUE ERROR - BurnPlus" body="${machinename}|${message}"
+    <target xsi:type="Mail" name="MailTarget" html="true" subject="RANKINGANDCOMPLETION ERROR - LarrysList" body="${machinename}|${message}"
         layout="${machinename}|${longdate}|${level:uppercase=true}|${logger}|${message}|${callsite}"
         to="errors@hackandcraft.com"
         from="errors@hackandcraft.com"
