--- a/LarrysList/packages/repositories.config
+++ b/LarrysList/packages/repositories.config
@@ -2,4 +2,5 @@
 <repositories>
   <repository path="..\LarrysList\packages.config" />
   <repository path="..\MailQueue\packages.config" />
+  <repository path="..\RankingandCompletion\packages.config" />
 </repositories>
