--- a/LarrysList/LarrysList/LarrysList.csproj
+++ b/LarrysList/LarrysList/LarrysList.csproj
@@ -178,6 +178,7 @@
     <Compile Include="Models\Region.cs" />
     <Compile Include="Models\Relation.cs" />
     <Compile Include="Models\ReviewedCollectors.cs" />
+    <Compile Include="Models\Search.cs" />
     <Compile Include="Models\Setting.cs" />
     <Compile Include="Models\Source.cs" />
     <Compile Include="Models\SourceType.cs" />
@@ -186,6 +187,7 @@
     <Compile Include="Models\ThemeSearch.cs" />
     <Compile Include="Models\Title.cs" />
     <Compile Include="Models\TopMuseum.cs" />
+    <Compile Include="Models\TypeAhead.cs" />
     <Compile Include="Models\University.cs" />
     <Compile Include="Models\Document.cs" />
     <Compile Include="Models\User.cs" />
