fixed term in collector search

--- a/LarrysList/MailQueue/bin/NLog.config
+++ b/LarrysList/MailQueue/bin/NLog.config
@@ -8,9 +8,7 @@
    -->
   <targets>
     <target xsi:type="File" name="f" fileName="${basedir}/logs/${shortdate}.log"
-               layout="${machinename} ${longdate} ${uppercase:${level}} ${message}">
-      <layout xsi:type="Log4JXmlEventLayout"/>
-    </target>
+         layout="${machinename} ${longdate} ${uppercase:${level}} ${message}" />
 
     <target xsi:type="Mail" name="MailTarget" html="true" subject="MAILQUEUE ERROR - BurnPlus" body="${machinename}|${message}"
         layout="${machinename}|${longdate}|${level:uppercase=true}|${logger}|${message}|${callsite}"
