--- a/LarrysList/Ranking/App.config
+++ b/LarrysList/Ranking/App.config
@@ -1,7 +1,7 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+﻿<?xml version="1.0"?>
 <configuration>
     <startup> 
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
+        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0"/>
     </startup>
   <connectionStrings>
     <add name="ApplicationServices" connectionString="data source=88.198.7.228\Descartes,1984;Initial Catalog=LarrysList_Dev;User Id=LarrysList_Job;Password=Popov2010;" providerName="System.Data.SqlClient"/>
