--- a/LarrysList/RankingandCompletion/bin/RankingandCompletion.exe.config
+++ b/LarrysList/RankingandCompletion/bin/RankingandCompletion.exe.config
@@ -1,5 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+  <appSettings>
+    <add key="env" value="LarrysListRankingAndCompletionDev"/>
+  </appSettings>
   <connectionStrings>
     <add name="ApplicationServices" connectionString="data source=88.198.7.228\Descartes,1984;Initial Catalog=LarrysList_Live;User Id=LarrysList_user;Password=Popov2010;" providerName="System.Data.SqlClient" />
   </connectionStrings>
