rankingandcompletion getting info from database + namspacing in Ranking cleaned

--- a/LarrysList/RankingandCompletion/bin/RankingandCompletion.vshost.exe.config
+++ b/LarrysList/RankingandCompletion/bin/RankingandCompletion.vshost.exe.config
@@ -1,9 +1,12 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+﻿<?xml version="1.0"?>
 <configuration>
+  <appSettings>
+    <add key="env" value="LarrysListRankingAndCompletionDev"/>
+  </appSettings>
   <connectionStrings>
-    <add name="ApplicationServices" connectionString="data source=88.198.7.228\Descartes,1984;Initial Catalog=LarrysList_Live;User Id=LarrysList_user;Password=Popov2010;" providerName="System.Data.SqlClient" />
+    <add name="ApplicationServices" connectionString="data source=88.198.7.228\Descartes,1984;Initial Catalog=LarrysList_Dev;User Id=LarrysList_user;Password=Popov2010;" providerName="System.Data.SqlClient"/>
   </connectionStrings>
     <startup> 
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
+        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0"/>
     </startup>
 </configuration>
