--- a/LarrysList/RankingandCompletion/RankingandCompletion.csproj
+++ b/LarrysList/RankingandCompletion/RankingandCompletion.csproj
@@ -59,6 +59,7 @@
     <Compile Include="CollectorQueue.cs" />
     <Compile Include="CompletionLogic\AssignCompletion.cs" />
     <Compile Include="ExtensionMethods.cs" />
+    <Compile Include="Globals.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="QueueRunner.cs" />
