added start service todeply script

--- a/LarrysList/packages/repositories.config
+++ b/LarrysList/packages/repositories.config
@@ -2,5 +2,6 @@
 <repositories>
   <repository path="..\LarrysList\packages.config" />
   <repository path="..\MailQueue\packages.config" />
+  <repository path="..\Ranking\packages.config" />
   <repository path="..\RankingandCompletion\packages.config" />
 </repositories>
