--- a/LarrysList/Ranking/packages.config
+++ b/LarrysList/Ranking/packages.config
@@ -2,5 +2,6 @@
 <packages>
   <package id="DBVC" version="0.2.7" targetFramework="net45" />
   <package id="NLog" version="2.0.0.2000" targetFramework="net45" />
+  <package id="NLog.Config" version="2.0.0.2000" targetFramework="net40" />
   <package id="TopShelf" version="3.1.1" targetFramework="net45" />
 </packages>
