added new version of dbvc 2.8

--- a/LarrysList/LarrysList/LarrysList.csproj
+++ b/LarrysList/LarrysList/LarrysList.csproj
@@ -42,7 +42,7 @@
   <ItemGroup>
     <Reference Include="DBVC, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\packages\DBVC.0.2.7\lib\DBVC.dll</HintPath>
+      <HintPath>..\packages\DBVC.0.2.8\lib\net40\DBVC.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="NLog">
