--- a/LarrysList/packages/repositories.config
+++ b/LarrysList/packages/repositories.config
@@ -4,4 +4,5 @@
   <repository path="..\MailQueue\packages.config" />
   <repository path="..\Ranking\packages.config" />
   <repository path="..\RankingandCompletion\packages.config" />
+  <repository path="..\ReportPortal\packages.config" />
 </repositories>
