--- a/LarrysList/MailQueue/MailQueue.csproj
+++ b/LarrysList/MailQueue/MailQueue.csproj
@@ -68,8 +68,9 @@
     <StartupObject />
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="DBVC">
-      <HintPath>..\packages\DBVC.0.2.7\lib\DBVC.dll</HintPath>
+    <Reference Include="DBVC, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\packages\DBVC.0.2.8\lib\net40\DBVC.dll</HintPath>
     </Reference>
     <Reference Include="Facebook, Version=6.0.10.0, Culture=neutral, PublicKeyToken=58cb4f2111d1e6de, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
