--- a/LarrysList/RankingandCompletion/RankingandCompletion.csproj
+++ b/LarrysList/RankingandCompletion/RankingandCompletion.csproj
@@ -33,8 +33,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="DBVC">
-      <HintPath>..\packages\DBVC.0.2.7\lib\DBVC.dll</HintPath>
+    <Reference Include="DBVC, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\packages\DBVC.0.2.8\lib\net40\DBVC.dll</HintPath>
     </Reference>
     <Reference Include="Newtonsoft.Json">
       <HintPath>..\LarrysList\bin\Newtonsoft.Json.dll</HintPath>
@@ -67,7 +68,9 @@
     <Compile Include="RankingLogic\AssignRanking.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="App.config" />
+    <None Include="App.config">
+      <SubType>Designer</SubType>
+    </None>
     <Content Include="NLog.config">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
