--- a/LarrysList/LarrysList/Web.config
+++ b/LarrysList/LarrysList/Web.config
@@ -17,7 +17,7 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true"/>
   </appSettings>
   <connectionStrings>
-    <add name="ApplicationServices" connectionString="data source=88.198.7.228\Descartes,1984;Initial Catalog=LarrysList_Dev;User Id=LarrysList_user;Password=Popov2010;" providerName="System.Data.SqlClient"/>
+    <add connectionString="data source=124.248.212.134;Initial Catalog=LarrysList_Live;User Id=LarrysList_user;Password=Popov2010" name="ApplicationServices" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <system.web>
     <httpRuntime/>
