--- a/LarrysList/RankingandCompletion/App.config
+++ b/LarrysList/RankingandCompletion/App.config
@@ -4,7 +4,7 @@
     <add key="env" value="LarrysListRankingAndCompletionDev"/>
   </appSettings>
   <connectionStrings>
-    <add   name="ApplicationServices" connectionString="data source=88.198.7.228\Descartes,1984;Initial Catalog=LarrysList_dev;User Id=LarrysList_user;Password=Popov2010;Connection Timeout=10000" providerName="System.Data.SqlClient"/>
+    <add   name="ApplicationServices" connectionString="data source=124.248.212.134\LARRY-001;Initial Catalog=LarrysList_Live;User Id=LarrysList_user;Password=Popov2010;Connection Timeout=10000" providerName="System.Data.SqlClient"/>
   </connectionStrings>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0"/>
